--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@ html, body, #__next {
 }
 body {
 	margin: 0;
-	font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+	font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
 }
 
 
